<?xml version="1.0" encoding="UTF-8"?>
<!--
 * This pom.xml comes with basic dependency requirements and create for mora-ejb-011-20230815001
 *
 * @Author: SLMORA
 * @DateTime: 8/15/2023 9:55 PM
 * <p>
 * Version      Date            Editor              Note
 * =====================================================================================================================
 * 1.0          8/15/2023       SLMORA              Initial Code
 *
 *
 *
-->
<project
		xmlns="http://maven.apache.org/POM/4.0.0"
		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
>
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.slmora.learn</groupId>
	<artifactId>mora-ejb-011-20230815001</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>

	<name>mora-ejb-011-20230815001</name>
	<!-- FIXME change it to the project's website -->
	<description>mora-ejb-011-20230815001</description>
	<url>http://www.slmora.com</url>
	<organization>
		<name>CeylonCode</name>
		<url>http://ceyloncode.com</url>
	</organization>
	<developers>
		<developer>
			<id>SLMORA</id>
			<name>Umesh Gunasekara</name>
			<email>umesh.gunasekara.n@gamil.com</email>
			<url>http://www.slmora.com</url>
			<organization>CeylonCode</organization>
			<organizationUrl>http://ceyloncode.com</organizationUrl>
			<roles>
				<role>owner</role>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>Asia/Colombo</timezone>
			<properties>
				<picUrl>https://avatars.githubusercontent.com/u/12097282?v=4</picUrl>
			</properties>
		</developer>
	</developers>
	
	<modules>
		<module>mora-ejb-011-20230815001-ear</module>
		<module>mora-ejb-011-20230815001-ejb</module>
		<module>mora-ejb-011-20230815001-common</module>
		<module>mora-ejb-011-20230815001-web</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>13</maven.compiler.source>
		<maven.compiler.target>13</maven.compiler.target>
		<mysql.connector.version>5.1.6</mysql.connector.version>
		<junit.jupiter.version>5.10.0</junit.jupiter.version>
		<logging.log4j.version>2.13.3</logging.log4j.version>
		<hibernate.version>6.1.4.Final</hibernate.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${logging.log4j.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${logging.log4j.version}</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j-impl</artifactId>
				<version>${logging.log4j.version}</version>
				<scope>test</scope>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.13.0</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/commons-collections/commons-collections -->
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>3.2.2</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.13.0</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.16.0</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-crypto</artifactId>
				<version>6.1.2</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.json/json -->
			<dependency>
				<groupId>org.json</groupId>
				<artifactId>json</artifactId>
				<version>20230618</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
			<dependency>
				<groupId>com.googlecode.json-simple</groupId>
				<artifactId>json-simple</artifactId>
				<version>1.1.1</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
<!--				<version>1.18.28</version>-->
				<version>1.18.20</version>
				<scope>provided</scope>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/javax.transaction/jta -->
			<dependency>
				<groupId>javax.transaction</groupId>
				<artifactId>jta</artifactId>
				<version>1.1</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>2.0.7</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>jstl</artifactId>
				<version>1.2</version>
<!--				<version>1.7.30</version>-->
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
			<dependency>
				<groupId>jakarta.servlet</groupId>
				<artifactId>jakarta.servlet-api</artifactId>
				<version>6.0.0</version>
				<scope>provided</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.servlet.jsp/jakarta.servlet.jsp-api -->
			<dependency>
				<groupId>jakarta.servlet.jsp</groupId>
				<artifactId>jakarta.servlet.jsp-api</artifactId>
				<version>3.1.1</version>
				<scope>provided</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.platform/jakarta.jakartaee-api -->
			<dependency>
				<groupId>jakarta.platform</groupId>
				<artifactId>jakarta.jakartaee-api</artifactId>
				<version>8.0.0</version>
				<scope>provided</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>32.1.1-jre</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
			<dependency>
				<groupId>commons-dbcp</groupId>
				<artifactId>commons-dbcp</artifactId>
				<version>1.4</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
			<dependency>
				<groupId>com.zaxxer</groupId>
				<artifactId>HikariCP</artifactId>
				<version>5.0.1</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
			<dependency>
				<groupId>com.mchange</groupId>
				<artifactId>c3p0</artifactId>
				<version>0.9.5.5</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jdbc -->
			<dependency>
				<groupId>org.apache.tomcat</groupId>
				<artifactId>tomcat-jdbc</artifactId>
<!--				<version>10.1.11</version>-->
				<version>9.0.39</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.vibur/vibur-dbcp -->
			<dependency>
				<groupId>org.vibur</groupId>
				<artifactId>vibur-dbcp</artifactId>
				<version>25.0</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
			<dependency>
				<groupId>org.hibernate.orm</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>${hibernate.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-hikaricp -->
			<dependency>
				<groupId>org.hibernate.orm</groupId>
				<artifactId>hibernate-hikaricp</artifactId>
				<version>${hibernate.version}</version>
			</dependency>

<!--			&lt;!&ndash; https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-jcache &ndash;&gt;-->
<!--			<dependency>-->
<!--				<groupId>org.hibernate.orm</groupId>-->
<!--				<artifactId>hibernate-jcache</artifactId>-->
<!--				<version>${hibernate.version}</version>-->
<!--			</dependency>-->

			<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
			<dependency>
				<groupId>org.hibernate.validator</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>8.0.1.Final</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-ehcache -->
			<dependency>
				<groupId>org.hibernate.orm</groupId>
				<artifactId>hibernate-ehcache</artifactId>
				<version>6.0.0.Alpha7</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
			<dependency>
				<groupId>jakarta.xml.bind</groupId>
				<artifactId>jakarta.xml.bind-api</artifactId>
				<version>4.0.0</version>
			</dependency>


<!--			&lt;!&ndash; https://mvnrepository.com/artifact/org.ehcache.modules/ehcache-107 &ndash;&gt;-->
<!--			<dependency>-->
<!--				<groupId>org.ehcache.modules</groupId>-->
<!--				<artifactId>ehcache-107</artifactId>-->
<!--				<version>3.10.4</version>-->
<!--			</dependency>-->

<!--			&lt;!&ndash; https://mvnrepository.com/artifact/org.ehcache/ehcache &ndash;&gt;-->
<!--			<dependency>-->
<!--				<groupId>org.ehcache</groupId>-->
<!--				<artifactId>ehcache</artifactId>-->
<!--				<version>3.10.8</version>-->
<!--			</dependency>-->


			<!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
			<dependency>
				<groupId>jakarta.persistence</groupId>
				<artifactId>jakarta.persistence-api</artifactId>
				<version>3.1.0</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
			<dependency>
				<groupId>com.google.zxing</groupId>
				<artifactId>core</artifactId>
				<version>3.5.2</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/com.google.zxing/javase -->
			<dependency>
				<groupId>com.google.zxing</groupId>
				<artifactId>javase</artifactId>
				<version>3.5.2</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>5.2.3</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>5.2.3</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.jupiter.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.jupiter.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>${junit.jupiter.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-all</artifactId>
				<version>1.3</version>
				<scope>test</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>5.4.0</version>
				<scope>test</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk18on -->
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcpkix-jdk18on</artifactId>
				<version>1.75</version>
			</dependency>
			
<!--			&lt;!&ndash; https://mvnrepository.com/artifact/mysql/mysql-connector-java &ndash;&gt;-->
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql.connector.version}</version>
			</dependency>


			<!-- https://mvnrepository.com/artifact/jakarta.ejb/jakarta.ejb-api -->
			<dependency>
				<groupId>jakarta.ejb</groupId>
				<artifactId>jakarta.ejb-api</artifactId>
				<version>4.0.1</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.inject/jakarta.inject-api -->
			<dependency>
				<groupId>jakarta.inject</groupId>
				<artifactId>jakarta.inject-api</artifactId>
				<version>2.0.1</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.jpa -->
			<dependency>
				<groupId>org.eclipse.persistence</groupId>
				<artifactId>org.eclipse.persistence.jpa</artifactId>
				<version>4.0.2</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.ws.rs/jakarta.ws.rs-api -->
			<dependency>
				<groupId>jakarta.ws.rs</groupId>
				<artifactId>jakarta.ws.rs-api</artifactId>
				<version>3.1.0</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.transaction/jakarta.transaction-api -->
			<dependency>
				<groupId>jakarta.transaction</groupId>
				<artifactId>jakarta.transaction-api</artifactId>
				<version>2.0.1</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.enterprise/jakarta.enterprise.cdi-api -->
			<dependency>
				<groupId>jakarta.enterprise</groupId>
				<artifactId>jakarta.enterprise.cdi-api</artifactId>
				<version>4.0.1</version>
				<scope>provided</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.jms/jakarta.jms-api -->
			<dependency>
				<groupId>jakarta.jms</groupId>
				<artifactId>jakarta.jms-api</artifactId>
				<version>3.1.0</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
			<dependency>
				<groupId>jakarta.mail</groupId>
				<artifactId>jakarta.mail-api</artifactId>
				<version>2.1.2</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api -->
			<dependency>
				<groupId>jakarta.annotation</groupId>
				<artifactId>jakarta.annotation-api</artifactId>
				<version>2.1.1</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
			<dependency>
				<groupId>jakarta.validation</groupId>
				<artifactId>jakarta.validation-api</artifactId>
				<version>3.0.2</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.xml.ws/jakarta.xml.ws-api -->
			<dependency>
				<groupId>jakarta.xml.ws</groupId>
				<artifactId>jakarta.xml.ws-api</artifactId>
				<version>4.0.0</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/jakarta.xml.soap/jakarta.xml.soap-api -->
			<dependency>
				<groupId>jakarta.xml.soap</groupId>
				<artifactId>jakarta.xml.soap-api</artifactId>
				<version>3.0.0</version>
			</dependency>

<!--		&lt;!&ndash; https://mvnrepository.com/artifact/jakarta.websocket/jakarta.websocket-api &ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>jakarta.websocket</groupId>-->
<!--			<artifactId>jakarta.websocket-api</artifactId>-->
<!--			<version>2.1.1</version>-->
<!--			<scope>provided</scope>-->
<!--		</dependency>-->

<!--		&lt;!&ndash; https://mvnrepository.com/artifact/jakarta.websocket/jakarta.websocket-client-api &ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>jakarta.websocket</groupId>-->
<!--			<artifactId>jakarta.websocket-client-api</artifactId>-->
<!--			<version>2.1.1</version>-->
<!--			<scope>provided</scope>-->
<!--		</dependency>-->
		</dependencies>
	</dependencyManagement>
    <build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
                    <configuration>
                        <source>13</source>
                        <target>13</target>
                        <outputFileName>mora-ejb-011-20230815001</outputFileName>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                    <configuration>
                        <excludes>
                            <exclude>Math</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
				<plugin>
				<artifactId>maven-ejb-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<ejbVersion>3.1</ejbVersion>
				</configuration>
			</plugin>
			<plugin>
                <artifactId>maven-war-plugin</artifactId>
				<version>2.4</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                    <packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes>
                </configuration>                
            </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
